# sonika

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  conftest.py  debug_stream.py  patch_app.py  patch_final_content.py  pyproject.toml  requirements.txt  test_sonika_cli.py  test_sonika_cli2.py  test_sonika_cli3.py  test_sonika_cli4.py  test_sonika_cli5.py  test_sonika_cli6.py
executor_bot/: __init__.py  bot.py  cli.py  registry.py  result.py  ui.py
executor_bot/tools/: __init__.py  base.py  bash.py
prompts/: core.txt  evaluator.txt  manager.txt  planner.txt  reporter.txt  retry.txt  save_memory.txt
sonika/: bot.py  cli.py  config_schema.py  factory.py  permissions.py  registry.py  ui.py
sonika/cli/: __init__.py  app.py  config.py  models_catalog.py  session_manager.py  tui.py
sonika/cli/renderers/: __init__.py  claude_style.py
sonika/interfaces/console/: app.py  ui.py
sonika/tools/: __init__.py  cron.py  files.py  http.py  wrapper.py
tests/: smoke_test_gemini.py  smoke_test_openai.py  test_consecutive_tasks.py  test_new_features.py  test_tui.py
