[project]
name = "executor-bot"
version = "0.2.1"
description = "Autonomous tool execution layer & CLI for AI orchestrators"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "ExecutorBot Team"}]

dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "sonika-ai-toolkit",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
opencode = "executor_bot.cli:app"

[tool.setuptools.packages.find]
include = ["executor_bot*"]
exclude = ["skills*", "tests*"]
